--- a/css/sliderQuestionStyle.css
+++ b/css/sliderQuestionStyle.css
@@ -106,7 +106,7 @@ h2{
 .lf-card-2{
 
   width: 80%;
-  height: 22rem;
+  height: auto;
   margin: 2% 10%;
   /*background-color: #5a5c51;*/
   background-color: grey;
