--- a/css/layout.css
+++ b/css/layout.css
@@ -150,7 +150,7 @@ a .header-link {
 .text-right {
   text-align: right!important;
 }
-.text-right {
+.text-left {
   text-align: left!important;
 }
 .text-center {
