--- a/css/sliderQuestionStyle.css
+++ b/css/sliderQuestionStyle.css
@@ -1,95 +1,34 @@
 body{
-    overflow-x: hidden;
-    background-color: #e9ece5;
-    color:#3b3a36;
+  overflow-x: hidden;
+  background-color: #e9ece5;
+  color:#3b3a36;
 }
-#msform fieldset:not(:first-of-type) {
-    display: none;
-}
-
-label:hover{
-  color:#2dbcb6;
-}
-li{
-  text-align: center;
-}
-input{
-    margin-left:18%;
-    margin-right: 5%;
-}
-label{
-  cursor: pointer;
-}
-i{
-  cursor: pointer;
-}
-i:hover{
-  color: #2dbcb6;
-}
-.submit{
-  margin-top: 8%;
-}
-
-
-/*#msform .submit .action-button {
-    width: 100px;
-    background: #2dbcb6;
-    font-weight: bold;
-    font-size: 1rem;
-    color: white;
-    border: 0 none;
-    cursor: pointer;
-    padding: 10px 5px;
-    margin: 2% 35%;
-    border: 2px solid black;
-}*/
-#msform .action-button {
-    float: left;
-    padding: 3% 5%;
-    margin-top: 10%;
-}
-#msform{
-  /*border: 2px solid purple;*/
-  width: 100%;
-  height: 30rem;
-  margin-top: 2%;
-}
-
-/*#msform .action-button:hover,
-#msform .action-button:focus {
-    box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
-}*/
 h2{
   margin-top:100px;
   text-align: center;
 }
-h3{
-  color: #6ed3cf;
-  text-align: center;
-  padding-top: 5%;
-  padding-bottom: 3%;
+#msform{
+  width: 100%;
+  height: 30rem;
+  margin-top: 2%;
 }
-
-
+#msform fieldset:not(:first-of-type) {
+  display: none;
+}
 /*progressbar*/
-
 #progressbar {
-    overflow: hidden;
-    /*CSS counters to number the steps*/
-    counter-reset: step;
-    /*border: 2px solid green;*/
-    display: flex;
+  overflow: hidden;
+  counter-reset: step;
+  display: flex;
 }
 
 #progressbar li {
-    list-style-type: none;
-    color:#e9ece5;
-    /*text-transform: uppercase;*/
-    width: 33.33%;
-    float: left;
-    position: relative;
-    /*border: 2px solid pink;*/
-
+  list-style-type: none;
+  color:#e9ece5;
+  width: 33.33%;
+  float: left;
+  position: relative;
+  text-align: center;
 }
 
 #progressbar li:before {
@@ -105,9 +44,7 @@ h3{
     margin: 0 auto 5px auto;
 }
 
-
 /*progressbar connectors*/
-
 #progressbar li:after {
     content: '';
     width: 100%;
@@ -118,22 +55,16 @@ h3{
     top: 9px;
     z-index: -1;
     font-size: 1rem;
-    /*put it behind the numbers*/
 }
 
 #progressbar li:first-child:after {
-    /*connector not needed before the first step*/
-    content: none;
+  content: none;
 }
-
-
-/*marking active/completed steps green*/
-/*The number of the step and the connector before it = green*/
 
 #progressbar li.active:before,
 #progressbar li.active:after {
-    background: #2dbcb6;
-    color: white;
+  background: #2dbcb6;
+  color: white;
 }
 .lf-card-2{
   width: 80%;
@@ -142,29 +73,41 @@ h3{
   background-color: grey;
   color:white;
 }
-
-/*input {
-    float: left;
-    clear: left;
-    width: 50px;
-    margin: 6% 5%;
-    line-height: 30px;
-}*/
-/*label {
-    float: left;
-    margin: 3% 0%;
-    vertical-align: middle;
-}*/
+h3{
+  color: #6ed3cf;
+  text-align: center;
+  padding-top: 5%;
+  padding-bottom: 3%;
+}
+label:hover{
+  color:#2dbcb6;
+}
+input{
+  margin-left:18%;
+  margin-right: 5%;
+}
+label{
+  cursor: pointer;
+}
+i{
+  cursor: pointer;
+}
+i:hover{
+  color: #2dbcb6;
+}
+.submit{
+  margin-top: 8%;
+}
+#msform .action-button {
+  float: left;
+  padding: 3% 5%;
+  margin-top: 10%;
+}
+/* Desktop view */
 @media screen and (min-width: 600px){
-
     h2{
         margin-top: 130px;
         font-size: 1.5rem;
-    }
-    h3{
-        font-size: 1.5rem;
-        padding-top: 5%;
-        padding-bottom: 3%;
     }
     #msform{
         width: 80%;
@@ -179,17 +122,22 @@ h3{
     #progressbar li:after {
         margin-top: 3%;
     }
+    .lf-card-2{
+        margin: 0% 22%;
+        width: 55%;
+        height: 70%;
+    }
+    h3{
+        font-size: 1.5rem;
+        padding-top: 5%;
+        padding-bottom: 3%;
+    }
     input{
         margin-left:33%;
         margin-right: 5%;
     }
     label{
       font-size: 1.3rem;
-    }
-    .lf-card-2{
-        margin: 0% 22%;
-        width: 55%;
-        height: 70%;
     }
     #msform .action-button {
       margin-top: 8%;
