change margin and padding of button

--- a/css/index.css
+++ b/css/index.css
@@ -24,8 +24,8 @@ html {
   color: #FFFFFF;
   text-align: center;
   font-size: 1rem;
-  padding: 2% 1%;
-  margin: 1% 1%;
+  padding: 10px 10px;
+  margin: 30px 30px;
   width: 70%;
   transition: all 0.5s;
   cursor: pointer;
