--- a/css/compare.css
+++ b/css/compare.css
@@ -1,24 +1,11 @@
 body{
-  margin-top: 25%;
+  margin-top: 30%;
   background-color: #e9ece5;
 }
 .heading{
   margin-bottom: 1%;
   display: flex;
   justify-content: center;
-}
-.compareButton{
-  display: flex;
-  justify-content: center;
-  padding-bottom: 3%;
-}
-.buttonStyling{
-  margin: 0% 2%;
-}
-.compareDetails{
-  background-color: #ddeeeb;
-  padding: 3%;
-  text-align: center;
 }
 .compareContainer{
   padding: 2%;
@@ -28,19 +15,32 @@ body{
   height: 20rem;
   width:90%;
 }
-.compareContainer input{
-  padding: 2%;
-  width: 50%;
-  height: auto;
-  margin: 2% 17%;
-  font-size:1rem;
-}
-
 img{
   width: 100%;
   height: 15rem;
   border: solid 2px #55aa99;
 }
+.compareContainer input{
+  padding: 2%;
+  width: 50%;
+  height: auto;
+  margin: 1% 17%;
+  font-size:1rem;
+}
+.compareButton{
+  display: flex;
+  justify-content: center;
+  margin-top: -10%;
+}
+.buttonStyling{
+  margin: 0% 2%;
+}
+.compareDetails{
+  background-color: #ddeeeb;
+  padding: 3%;
+  text-align: center;
+}
+
 button{
   font-weight: bold;
 }
@@ -58,8 +58,15 @@ button{
  .compareContainer{
    display: flex;
  }
- h1{
+ h2{
    font-size: 1.5rem;
+   margin: -2%;
+   margin-bottom: 1%;
  }
+ .compareButton{
+   margin-top:-5%;
+   margin-bottom: 2%;
+ }
+ 
 
 }
