--- a/css/map.css
+++ b/css/map.css
@@ -1,150 +1,15 @@
-/* map section made by Amanada */
-.mapPage{
-    background-color:#ddeeeb;  
-    overflow: auto;
-}
-
-.imagemap__item {
-  display: none;
-}
-
-.mapDiv{
-    display:inline-block;
-    width:630px;
-    height:710px;
-    margin:1px;
-    margin-left:2%;
-}
-.mapTextDivRight1{
-    display:inline-block;
-    color:black;
-    width:320px;
-    height:400px; 
-    margin:2px;
-    float:none;
-    margin-left:7%;
-   
-}
-
-.mapTextDivRight2{
-    display:inline-block;
-    color:black;
-    width:180px;
-    height:400px; 
-    margin:50px;
-    float:right;
-    margin-top:10%;
-}
-
-
-.mapText{
-    font-family: Philosopher;
-    color:#3b3a36;
-    font-size: 22px;
-    text-shadow: 4px 4px 6px #ffffff;
-}
-
-.mapTextTitle{
-    font-family: Philosopher;
-    color:#55aa99;
-    text-shadow:4px 4px 6px #ffffff;
-    font-size: 30px;
-    font-weight:bold;
-}
-
-
-.mapLink:link{
-    text-decoration:none;
-}
-
-.mapLink:visited{
-    color:#000000;
-}
-.mapLink:hover {
-    color:#5b5b5b;
-    opacity:0.8;
+#googleMap{
+    width:100%;
+    height:700px;
 }
 
 @media only screen and (min-width: 1025px) {
-.mapPage{
-    background-color:#ddeeeb;  
-    overflow: auto;
+
+#googleMap{
+    width:50%;
+    height:700px;
 }
 
 
-img {
-  border-radius: 12px;
-  position: flex;
 }
 
-.imagemap__item {
-  display: none;
-}
-
-.mapDiv{
-    display:inline-block;
-    width:720px;
-    height:650px;
-    margin:1px;
-    margin-left: 12%;
-    margin-top:2%;
-    margin-bottom:0%;
-}
-
-.mapTextDivRight1{
-    position:absolute;
-    display:inline-block;
-    color:black;
-    width:420px;
-    height:500px; 
-    margin:39px;
-    float:right;
-    margin-right:15%;
-    margin-top:7%
-}
-
-.mapLink:link{
-    text-decoration:none;
-}
-
-.mapLink:visited{
-    color:#3b3a36;
-}
-.mapLink:hover {
-    color:#55aa99;
-}
-
-
-.mapTextDivRight2{
-    display:inline-block;
-    color:black;
-    width:180px;
-    height:500px; 
-    margin:5px;
-    float:right;
-    margin-right:7.5%;
-    margin-top:11.5%
-}
-
-.mapText{
-    font-family: Philosopher;
-    color:#3b3a36;
-    font-size: 22px;
-    text-shadow: 4px 4px 6px #ffffff;
-}
-
-.mapTextTitle{
-    font-family: Philosopher;
-    color:#55aa99;
-    text-shadow:4px 4px 6px #ffffff;
-    font-size: 35px;
-    font-weight:bold;
-}
-}
-
-
-.heart {
-    cursor: url("../image/smallHeart.png"), pointer;
-}
-
-/* map section ended by Amanda*/
