--- a/css/map.css
+++ b/css/map.css
@@ -1,6 +1,8 @@
+@media only screen and (max-width: 500px){
 #googleMap{
     width:100%;
     height:700px;
+}
 }
 
 @media only screen and (min-width: 1025px) {
@@ -12,4 +14,3 @@
 
 
 }
-
