--- a/css/finalPage.css
+++ b/css/finalPage.css
@@ -2,24 +2,24 @@ body
 {
 	background-color: #e9ece5;
 	font-size: 1.2rem;
+	height: 100%;
 }
-#awesome
-{
-	margin-top: 15%;
-	color: #55aa99;
-	font-size:40px;
-	font-weight:5% ;
-	margin-bottom: 0%;
-}
+
 #neighborhoodName,#recommend
 {
 	margin-top:0%; 
 	margin-bottom:0%;
 }
-#recommend, h3,p
+#recommend, h3, p
 {
 	color: #3b3a36;
 	text-align: center;
+}
+
+h2
+{
+	font-size: 1.7rem;
+	margin-top: 0%;
 }
 p  a
 {
@@ -27,27 +27,21 @@ p  a
 }
 #thankyou
 {
-	margin-top: 2%;
-	margin-bottom:0%;
+	margin-top:12%;
+	margin-bottom:3%;
+	
 }
-#footer
+#team
 {
-	margin-bottom:0%;
-
-}
-#neighborhoodName 
-{
-	font-size: 45px;
+	margin-top: 3%;
 }
 p
 {
 	font-weight: bold;
 }
 
-@media only screen  and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1)  
+@media only screen  and (min-device-width: 1200px) and (max-device-width: 1600px)   
 {
-	#awesome
-	{
-		margin-top:7%;
-	}
+	
 }
+
