--- a/css/sliderQuestionStyle.css
+++ b/css/sliderQuestionStyle.css
@@ -105,6 +105,9 @@ i:hover{
 }
 /* Desktop view */
 @media screen and (min-width: 600px){
+    body{
+       height: 400px;
+    }
     h2{
         margin-top: 130px;
         font-size: 1.5rem;
