--- a/css/finalPage.css
+++ b/css/finalPage.css
@@ -2,7 +2,8 @@ body
 {
 	background-color: #e9ece5;
 	font-size: 1.2rem;
-	height: 100%;
+	/*height: 100%;*/
+	height:auto;
 }
 
 #neighborhoodName,#recommend
