--- a/css/compare.css
+++ b/css/compare.css
@@ -65,6 +65,7 @@ button{
    font-size: 1.5rem;
    margin: -2%;
    margin-bottom: 1%;
+   margin-top: .4%
  }
  .compareButton{
    margin-top:-5%;
