--- a/css/SuggestionsPage.css
+++ b/css/SuggestionsPage.css
@@ -46,6 +46,15 @@
   margin-top: 2%;
   color: #3b3a36;
 }
+#backtotop
+{
+  text-align: right;
+  margin-right: 0%;
+}
+#backtotop a:hover
+{
+  color:#3b3a36; 
+}
 /*Desktop*/
 @media only screen and (min-width: 1025px) {
   .graphicsWrapper {
