--- a/css/compare.css
+++ b/css/compare.css
@@ -43,12 +43,12 @@ img{
   padding: 3%;
   text-align: center;
 }
-select{
+/*select{
   width:100%;
   height: 50px;
   font-size: 1rem;
   margin: 3% 2%;
-}
+}*/
 
 button{
   font-weight: bold;
@@ -80,12 +80,12 @@ button{
  #errorMessage1, #errorMessage2{
    margin: 0% 18%;
  }
- select{
+ /*select{
    width:70%;
    height: 50px;
    font-size: 1rem;
    margin: 3% 10%;
- }
+ }*/
 
 
 }
